--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
           <div class="ml-4 flex-grow">
             <h3 class="font-semibold text-slate-100 group-hover:text-[#94fdf8] transition-colors">Packages</h3>
-            <p class="text-xs text-slate-400">Booking for events & custom photoshoots</p>
+            <p class="text-xs text-slate-400">Book for event & custom photoshoots</p>
           </div>
           <i data-lucide="arrow-right" class="w-4 h-4 text-slate-500 group-hover:text-[#94fdf8] transition-transform group-hover:translate-x-1"></i>
         </div>
