--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <i data-lucide="image" class="w-5 h-5"></i>
           </div>
           <div class="ml-4 flex-grow">
-            <h3 class="font-semibold text-slate-100 group-hover:text-[#94fdf8] transition-colors">EXIF Overlay Generator (WIP)</h3>
-            <p class="text-xs text-slate-400">Overlay camera settings onto a blurred image</p>
+            <h3 class="font-semibold text-slate-100 group-hover:text-[#94fdf8] transition-colors">EXIF Overlay</h3>
+            <p class="text-xs text-slate-400">Clean Summaries for Every Photo!</p>
           </div>
           <i data-lucide="external-link" class="w-4 h-4 text-slate-600 group-hover:text-slate-400"></i>
         </div>
