--- a/ad-dash.html
+++ b/ad-dash.html
@@ -107,17 +107,6 @@
         </a>
 
         <!-- App Item -->
-        <a href="https://guacamole.adlaidyson.co.uk/guacamole" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
-          <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
-            <i class="fa-solid fa-server"></i>
-          </div>
-          <div>
-            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Guacamole</div>
-            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">guacamole.adlaidyson.co.uk/guacamole</div>
-          </div>
-        </a>
-
-        <!-- App Item -->
         <a href="https://notes.adlaidyson.co.uk" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
           <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
             <i class="fa-solid fa-file-lines"></i>
@@ -134,19 +123,19 @@
             <i class="fa-solid fa-image"></i>
           </div>
           <div>
-            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Immich Photos</div>
+            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Immich</div>
             <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">imph.adlaidyson.co.uk</div>
           </div>
         </a>
 
         <!-- App Item -->
-        <a href="https://jf.adlaidyson.co.uk" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
+        <a href="http://10.0.0.4:32400" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
           <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
             <i class="fa-regular fa-circle-play"></i>
           </div>
           <div>
-            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Jellyfin Media Server</div>
-            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">jf.adlaidyson.co.uk</div>
+            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Plex Media Server</div>
+            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">10.0.0.4:32400</div>
           </div>
         </a>
 
@@ -158,6 +147,17 @@
           <div>
             <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">MeTube YT Downloader</div>
             <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">yt.adlaidyson.co.uk</div>
+          </div>
+        </a>
+        
+        <!-- App Item -->
+        <a href="https://ytplayer.adffp.uk" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
+          <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
+            <i class="fa-solid fa-download"></i>
+          </div>
+          <div>
+            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">ADFFP YT Player</div>
+            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">ytplayer.adffp.uk</div>
           </div>
         </a>
 
@@ -184,17 +184,6 @@
         </a>
 
         <!-- App Item -->
-        <a href="https://clients.adlaidyson.co.uk" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
-          <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
-            <i class="fa-solid fa-users-viewfinder"></i>
-          </div>
-          <div>
-            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Picr Client Galleries</div>
-            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">clients.adlaidyson.co.uk</div>
-          </div>
-        </a>
-
-        <!-- App Item -->
         <a href="http://portainer.batlanrobin.local:9443" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
           <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
             <i class="fa-brands fa-docker"></i>
@@ -215,26 +204,37 @@
             <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">qr.adlaidyson.co.uk</div>
           </div>
         </a>
-
+        
         <!-- App Item -->
-        <a href="https://rc.adlaidyson.co.uk" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
+        <a href="https://exifoverlay.com" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
           <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
-            <i class="fa-regular fa-comments"></i>
+            <i class="fa-solid fa-qrcode"></i>
           </div>
           <div>
-            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Rocket.Chat</div>
-            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">rc.adlaidyson.co.uk</div>
+            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">EXIF Overlay</div>
+            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">exifoverlay.com</div>
           </div>
         </a>
 
         <!-- App Item -->
-        <a href="https://adffp.uk/dashboard" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
+        <a href="https://mmchat.adffp.uk" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
+          <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
+            <i class="fa-regular fa-comments"></i>
+          </div>
+          <div>
+            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Mattermost</div>
+            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">mmchat.adffp.uk</div>
+          </div>
+        </a>
+
+        <!-- App Item -->
+        <a href="https://adffp.uk" target="_blank" class="flex items-center gap-4 hover:bg-slate-800/50 p-2 -ml-2 rounded-lg transition-colors group">
           <div class="text-slate-100 group-hover:text-[#94fdf8] transition-colors w-6 flex justify-center text-xl">
             <i class="fa-solid fa-link"></i>
           </div>
           <div>
-            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Short Links</div>
-            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">adffp.uk/dashboard</div>
+            <div class="text-[13px] font-bold text-slate-100 uppercase tracking-wide group-hover:text-white">Snapp Li Short Links</div>
+            <div class="text-[11px] text-slate-400 uppercase tracking-wider truncate">adffp.uk</div>
           </div>
         </a>
 
