--- a/index.html
+++ b/index.html
@@ -178,6 +178,27 @@
           <i class="fa-solid fa-arrow-up-right-from-square text-sm text-slate-600 group-hover:text-red-400 transition-colors"></i>
         </div>
       </a>
+      
+      <!-- Link: X -->
+      <a href="https://adffp.uk/x" class="animate-fade-in delay-700 block group relative">
+        <div class="absolute -inset-0.5 bg-gradient-to-r from-[#94fdf8] to-blue-600 rounded-xl opacity-0 group-hover:opacity-75 blur transition duration-300"></div>
+
+        <div class="relative flex items-center p-3.5 bg-slate-900 border border-slate-800 rounded-xl hover:bg-slate-800 transition duration-200">
+    
+        <!-- Icon -->
+        <div class="bg-slate-950/50 p-2 rounded-lg border border-slate-800 text-slate-200 flex items-center justify-center w-10 h-10 shadow-inner">
+          <i class="fa-brands fa-x text-lg"></i>
+        </div>
+
+      <!-- Text -->
+      <div class="ml-4 flex-grow">
+        <h3 class="font-semibold text-slate-100 transition-colors">X</h3>
+      </div>
+
+      <!-- External icon -->
+      <i class="fa-solid fa-arrow-up-right-from-square text-sm text-slate-600 group-hover:text-slate-300 transition-colors"></i>
+   </div>
+ </a>
 
       <!-- Link: Threads -->
       <a href="https://adffp.uk/threads" class="animate-fade-in delay-800 block group relative">
